--- a/addons/current_song_wtv/style.css
+++ b/addons/current_song_wtv/style.css
@@ -16,6 +16,8 @@ div.header {
 	background-color: rgb(40, 56, 72);
 	border-radius: 8px 8px 0 0;
 	border-bottom: 0.5vw solid black;
+	display: flex;
+	align-items: center;
 }
 
 /* This is the popup block that contains all the data */
@@ -45,7 +47,6 @@ h1.accuracy_percentage {
 h1.title {
 	display: inline-block;
 	font-size: 3.5vw;
-	line-height: 0;
 	color: white;
 }
 
@@ -55,7 +56,6 @@ img.pick {
 	float: left;
 	padding-right: 1.5vw;
 	margin-left: 7px;
-	margin-top: 7px;
 }
 
 /* This applies to the album cover on the popup */
