Moving over to using async patterns and events Bump version to 0.1.0 Addons: Changed to polling "127.0.0.1" instead of "localhost" because apparently thats better current_song_wtv: Added a media player like progress bar for song timer Added song_logger addon to keep a log of played songs

--- a/addons/current_song_wtv/style.css
+++ b/addons/current_song_wtv/style.css
@@ -24,6 +24,7 @@ div.header {
 div.content {
 	overflow: hidden;
 	padding-left: 2vw;
+	padding-right: 2vw;
 	background-color: rgba(85, 98, 111, 0.84);
 	border-radius: 0 0 7px 7px;
 }
@@ -62,8 +63,32 @@ img.pick {
 img.album_cover {
 	width: 23%;
 	float: right;
-	margin: 2vw;
+	margin: 2vw 0 1vw 2vw;
 	border-style: solid;
 	border-color: black;
 	border-width: 3px;
+}
+
+/* Classes for the progress bar */
+div.progress_bar {
+	background-color: rgb(40, 56, 72);
+	height: 4vw;
+	font-size: 4vw;
+	margin: 0 0 1vw 0;
+	clear: both;
+	text-align: center;
+}
+
+div.progress_bar_inner {
+	background-color: rgba(95, 108, 121, 0.3);
+	height: 100%;
+	width: 0;
+}
+
+p.progress_bar_text {
+	padding: 0;
+	margin: 0;
+	height: 0;
+	overflow: visible;
+	color: white;
 }
